--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                         <span class="price-currency">ر.س/شهر</span>
                     </div>
                     <div class="product-buttons">
-                        <a href="/clinix/" class="btn btn-primary">
+                        <a href="./clinix/index.html" class="btn btn-primary">
                             <i class="fas fa-arrow-left"></i> اكتشف CliniX
                         </a>
                         <a href="https://wa.me/9665477705498?text=مرحباً، أريد معرفة المزيد عن CliniX" class="btn btn-secondary" target="_blank">
