--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                 <li><a href="#home">الرئيسية</a></li>
             </ul>
             <div class="nav-auth-buttons">
-                <a href="./Dashboard/register.html" class="btn-nav-signup">إنشاء حساب</a>
-                <a href="./Dashboard/index.html" class="btn-nav-login">تسجيل الدخول</a>
+                <a href="./dashboard/register.html" class="btn-nav-signup">إنشاء حساب</a>
+                <a href="./dashboard/index.html" class="btn-nav-login">تسجيل الدخول</a>
             </div>
             <div class="mobile-menu-toggle" id="mobileMenu">
                 <i class="fas fa-bars"></i>
